--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@asgardeo/auth-react": "^4.0.3",
         "@babel/runtime-corejs3": "^7.20.6",
         "@textea/json-viewer": "^2.14.0",
+        "ag-grid-react": "^31.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.3.0"
