--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "ES6",
+        "target": "es2017",
         "jsx": "react",
         "module": "ESNext",
         "sourceMap": true,
